--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <!-- Top Bar -->
     <header class="top-bar">Minecraft Information Website</header>
+    <header class="secondary-bar"></header>
 
     <!-- Navigation Tabs -->
     <nav>
