--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
     <!-- Home Page -->
     <h1 class="title">Hello I am Sillynano, This is my Minecraft Information website!</h1>
     <p class="title">Here you can find information about Minecraft, including its features, gameplay, and more.</p>
+    <p class="title">This website is designed to provide a comprehensive overview of Minecraft, its features, and learn the history of the game.</p>
     
     <div class="footer">
         <button type="button"><a href="https://minecraft.net" target="_blank">Minecraft Official Website</a></button>
         <button type="button"><a href="https://sillynano.xyz" target="_blank">My Website</a></button>
+        <p>© 2025 Sillynano. All rights reserved.</p>
     </div>
 </body>
 </html>
