Update stylesheet and script paths in HTML files for consistency

--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html website</title>
-    <link rel="stylesheet" href="/minecraft/style.css">
-    <script src="/minecraft/script.js" defer></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/script.js" defer></script>
 </head>
 <body>
     <!-- Top Bar -->
@@ -14,9 +14,9 @@
     <!-- Navigation Tabs -->
     <nav>
         <ul>
-            <li><a href="/minecraft">Home</a></li>
-            <li><a href="/minecraft/minecraft">Minecraft Information</a></li>
-            <li><a href="/minecraft/features">Features</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/minecraft">Minecraft Information</a></li>
+            <li><a href="/features">Features</a></li>
         </ul>
     </nav>
     <!-- Home Page -->
