Update top bar text and improve layout styling for consistency

--- a/features/index.html
+++ b/features/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Top Bar -->
-    <header class="top-bar">Minecraft Information Website</header>
+    <header class="top-bar">Wiki Craft</header>
 
 
     <!-- Navigation Tabs -->
