--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <!-- Top Bar -->
-    <header class="top-bar">Minecraft Information Website</header>
-    <header class="secondary-bar"></header>
+    <header class="top-bar">Wiki Craft</header>
 
     <!-- Navigation Tabs -->
     <nav>
@@ -21,9 +20,9 @@
         </ul>
     </nav>
     <!-- Home Page -->
-    <h1 class="title">Hello I am Sillynano, This is my Minecraft Information website!</h1>
+    <p class="title">Welcome! I am Sillynano, I want to make a site where people can learn about anything about minecraft</p>
     <p class="title">Here you can find information about Minecraft, including its features, gameplay, and more.</p>
-    <p class="title">This website is designed to provide a comprehensive overview of Minecraft, its features, and learn the history of the game.</p>
+    <p class="title">This site is a work in progress, so please be patient as I add more content.</p> 
     
     <div class="footer">
         <button type="button"><a href="https://minecraft.net" target="_blank">Minecraft Official Website</a></button>
