Add contact page and update navigation for improved accessibility

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
             <li><a href="/">Home</a></li>
             <li><a href="/minecraft">Minecraft Information</a></li>
             <li><a href="/features">Features</a></li>
+            <li><a href="/contact">Contact</a></li>
         </ul>
     </nav>
     <!-- Home Page -->
     <p class="title">Welcome! I am Sillynano, I want to make a site where people can learn about anything about minecraft</p>
     <p class="title">Here you can find information about Minecraft, including its features, gameplay, and more.</p>
     <p class="title">This site is a work in progress, so please be patient as I add more content.</p> 
+    <p class="title">If you have any suggestions or feedback, feel free to reach out to me through the contact page.</p>
     
     <div class="footer">
         <button type="button"><a href="https://minecraft.net" target="_blank">Minecraft Official Website</a></button>
