--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -17,9 +17,10 @@
             <li><a href="/">Home</a></li>
             <li><a href="/minecraft">Minecraft Information</a></li>
             <li><a href="/features">Features</a></li>
+            <li><a href="/contact">Contact</a></li>
         </ul>
     </nav>
-    <!-- Home Page -->
+    <!-- Minecraff Info Page -->
     <h1>Minecraft Information</h1>
     <p>Minecraft is a sandbox game, where you are able to build and create anything you can think of!</p>
     <p>In Minecraft, you can explore vast worlds, gather resources, craft items, and build structures. The game features different modes such as Survival, where you must manage your health and hunger, and Creative, where you have unlimited resources to build freely.</p>
