--- a/features/index.html
+++ b/features/index.html
@@ -18,6 +18,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/minecraft">Minecraft Information</a></li>
             <li><a href="/features">Features</a></li>
+            <li><a href="/contact">Contact</a></li>
         </ul>
     </nav>
     <!-- Home Page -->
