Remove old contact page and update navigation links for consistency

--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Html website</title>
+    <title>Wiki Craft</title>
     <link rel="stylesheet" href="/style.css">
     <script src="/script.js" defer></script>
 </head>
@@ -20,6 +20,8 @@
             <li><a href="/contact">Contact</a></li>
         </ul>
     </nav>
+
+
     <!-- Minecraff Info Page -->
     <h1>Minecraft Information</h1>
     <p>Minecraft is a sandbox game, where you are able to build and create anything you can think of!</p>
