Update contact page content for clarity and personal touch

--- a/contact/index.html
+++ b/contact/index.html
@@ -22,7 +22,7 @@
     </nav>
     <!-- Contact Page -->
     <h1>Contact Us</h1>
-    <p>If you have any questions, suggestions, or feedback, feel free to reach out to us!</p>
-    <p>You can contact us via email at <a href="nano47606@gmail.com"> 
-    <p>Please don't spam my email thank you!</p>   
+    <p>If you have any questions, suggestions, or feedback, feel free to reach out to me!</p>
+    <p>You can talk to me by slack</p>
+    <p>My slack username is <strong>sillynano</strong></p>
     
