--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -46,6 +46,7 @@
     <div class="footer">
         <button type="button"><a href="https://minecraft.net" target="_blank">Minecraft Official Website</a></button>
         <button type="button"><a href="https://sillynano.xyz" target="_blank">My Website</a></button>
+        <p>© 2025 Sillynano. All rights reserved.</p>
     </div>
 </body>
 </html>
