--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </ul>
     </nav>
     <!-- Home Page -->
-    <p class="title">Welcome! I am Sillynano, I want to make a site where people can learn about anything about minecraft</p>
-    <p class="title">Here you can find information about Minecraft, including its features, gameplay, and more.</p>
-    <p class="title">This site is a work in progress, so please be patient as I add more content.</p> 
-    <p class="title">If you have any suggestions or feedback, feel free to reach out to me through the contact page.</p>
+    <p class="hometext">Welcome! I am Sillynano, I want to make a site where people can learn about anything about minecraft</p>
+    <p class="hometext">Here you can find information about Minecraft, including its features, gameplay, and more.</p>
+    <p class="hometext">This site is a work in progress, so please be patient as I add more content.</p> 
+    <p class="hometext">If you have any suggestions or feedback, feel free to reach out to me through the contact page.</p>
     
     <div class="footer">
         <button type="button"><a href="https://minecraft.net" target="_blank">Minecraft Official Website</a></button>
