--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <p class="hometext">Here you can find information about Minecraft, including its features, gameplay, and more.</p>
     <p class="hometext">This site is a work in progress, so please be patient as I add more content.</p> 
     <p class="hometext">If you have any suggestions or feedback, feel free to reach out to me through the contact page.</p>
+
+    <img src="https://cdn.sillynano.xyz/images/minecraft.png" alt="Minecraft Logo" class="minecraft-logo">
     
     <div class="footer">
         <button type="button"><a href="https://minecraft.net" target="_blank">Minecraft Official Website</a></button>
