Remove footer sections from contact, features, and Minecraft pages; update navigation for improved layout and copyright visibility

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
             <li><a href="/minecraft">Minecraft Information</a></li>
             <li><a href="/features">Features</a></li>
             <li><a href="/contact">Contact</a></li>
+            <li><button type="button"><a href="https://minecraft.net" target="_blank">Minecraft Official</a></button></li>
+            <li><button type="button"><a href="https://sillynano.xyz" target="_blank">My Website</a></button></li>
         </ul>
+        <p class="nav-copyright">© 2025 Sillynano</p>
     </nav>
     <!-- Home Page -->
     <p class="hometext">Welcome! I am Sillynano, I want to make a site where people can learn about anything about minecraft</p>
@@ -27,11 +30,5 @@
     <p class="hometext">If you have any suggestions or feedback, feel free to reach out to me through the contact page.</p>
 
     <img src="https://cdn.sillynano.xyz/images/minecraft.png" alt="Minecraft Logo" class="minecraft-logo">
-    
-    <div class="footer">
-        <button type="button"><a href="https://minecraft.net" target="_blank">Minecraft Official Website</a></button>
-        <button type="button"><a href="https://sillynano.xyz" target="_blank">My Website</a></button>
-        <p>© 2025 Sillynano. All rights reserved.</p>
-    </div>
 </body>
 </html>
