--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -34,19 +34,7 @@
     <p>For more information, you can visit the official Minecraft website at the link below.</p>
     <p>Enjoy your journey in the world of Minecraft!</p>
 
-
-
-
-
-
-
-
-
-
-    <div class="footer">
-        <button type="button"><a href="https://minecraft.net" target="_blank">Minecraft Official Website</a></button>
-        <button type="button"><a href="https://sillynano.xyz" target="_blank">My Website</a></button>
-        <p>© 2025 Sillynano. All rights reserved.</p>
-    </div>
+</body>
+</html>
 </body>
 </html>
