--- a/contact/index.html
+++ b/contact/index.html
@@ -26,12 +26,5 @@
     <p>You can talk to me by slack</p>
     <p>My slack username is <strong>sillynano</strong></p>
 
-
-
-
-    <div class="footer">
-        <button type="button"><a href="https://minecraft.net" target="_blank">Minecraft Official Website</a></button>
-        <button type="button"><a href="https://sillynano.xyz" target="_blank">My Website</a></button>
-        <p>© 2025 Sillynano. All rights reserved.</p>
-    </div>
-    
+</body>
+</html>
