Add new sections for Tools and Combat in Features page; update Home page welcome message and styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
     <!-- Home Page -->
-    <p class="hometext">Welcome! I am Sillynano, I wanted to make a site where people can learn about anything about minecraft</p>
+    <h1>Welcome to my Website!</h1>
     <p class="hometext">Here you can find information about Minecraft, including its features, gameplay, and more.</p>
     <p class="hometext">This site is a work in progress, so please be patient as I add more content.</p> 
     <p class="hometext">If you have any suggestions or feedback, feel free to reach out to me through the contact page.</p>
