--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <li><a href="/minecraft">Minecraft Information</a></li>
             <li><a href="/features">Features</a></li>
             <li><a href="/contact">Contact</a></li>
+            <li><a href="/Extras">Extras</a></li>
+
         </ul>
     </nav>
     <!-- Home Page -->
