Fix typo in Extras page link to personal website

--- a/Extras/index.html
+++ b/Extras/index.html
@@ -29,7 +29,7 @@
     <ul>
         <li><a href="https://www.minecraft.net/en-us/download">Download Minecraft</a></li>
         <li><a href="https://www.minecraft.net/en-us">Minecraft Home Page</a></li>
-        <li><a href="https://sillynano.xyz">My Website!/a></li>
+        <li><a href="https://sillynano.xyz">My Website!</a></li>
     </ul>
     <p>These links will take you to the official Minecraft website where you can find more information, updates, and resources related to the game.</p>
     <p>Enjoy exploring the world of Minecraft!</p>
