Add introductory block animation and enhance homepage layout

--- a/features/index.html
+++ b/features/index.html
@@ -35,7 +35,7 @@
     <h2>Multiplayer</h2>
     <p>Minecraft's multiplayer mode allows players to connect and interact with others in shared worlds. Players can join public servers or create private ones, enabling them to collaborate on building projects, engage in mini-games, or explore together. The multiplayer experience fosters a sense of community, as players can trade resources, share creations, and participate in events. With various server types catering to different playstyles, Minecraft's multiplayer aspect enhances the game's social dynamics and encourages creativity through collaboration.</p>
     <h2>Bosses</h2>
-    <p>Minecraft features several formidable bosses that challenge players and provide unique rewards. The Ender Dragon, found in the End dimension, is the game's primary boss, requiring players to destroy Ender Crystals before defeating it. The Wither, created by players using soul sand and wither skeleton skulls, is another challenging boss that drops Nether Stars used to craft beacons.The Warden in the Deep Dark,it drops a sculk catalyst, but the Warden isn't meant to be fought instead as a obstacle. These bosses not only test players' combat skills but also offer valuable resources that enhance gameplay and progression.</p>
+    <p>Minecraft features several formidable bosses that challenge players and provide unique rewards. The Ender Dragon, found in the End dimension, is the game's primary boss, requiring players to destroy Ender Crystals before defeating it. The Wither, created by players using soul sand and wither skeleton skulls, is another challenging boss that drops Nether Stars used to craft beacons.The Warden in the Deep Dark,it drops a sculk catalyst when killed, but the Warden isn't meant to be fought instead as a obstacle. These bosses not only test players' combat skills but also offer valuable resources that enhance gameplay and progression.</p>
     <h2>Redstone</h2>
     <p>Redstone is a versatile material in Minecraft that allows players to create complex contraptions and mechanisms. It functions like electrical wiring, enabling players to build everything from simple doors to intricate machines. Redstone can be used to create circuits, logic gates, and even automated farms. Its applications are vast, ranging from basic redstone lamps to advanced creations like calculators and computers within the game. The ability to manipulate redstone adds a layer of depth to Minecraft, encouraging players to experiment and innovate with their designs.</p>
     <h2>Farming</h2>
@@ -69,6 +69,6 @@
     <h2>Realms</h2>
     <p>Minecraft Realms is a subscription-based service that allows players to create and manage private multiplayer servers. It provides a safe and convenient way for friends and family to play together in their own worlds without the need for complex server setups. Realms supports cross-platform play, enabling players on different devices to join the same server. The service also offers regular updates, exclusive content, and the ability to invite up to 10 players at a time. Realms is an excellent option for those who want a hassle-free multiplayer experience while enjoying the creative and collaborative aspects of Minecraft.</p>
 
-    
+
 </body>
 </html>
